--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         "ext-iconv": "*",
         "ext-fileinfo": "*",
         "nesbot/carbon": ">=1.0",
-        "symfony/http-foundation": ">=2.8.0",
+        "symfony/http-foundation": "2.7.*",
         "illuminate/pagination": ">=5.0.0"
     },
     "require-dev": {
